# gnomecast

./: README.md  gnomecast.py  pyproject.toml  setup.py  test_gnomecast.py
gnomecast/: __init__.py  __main__.py  cache.py  devices.py  ffmpeg.py  gui.py  main.py  screensaver.py  subtitles.py  utils.py  webserver.py
tests/: test_gnomecast.py
